--- a/layouts/collaborate/section.html
+++ b/layouts/collaborate/section.html
@@ -21,7 +21,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-6 col-md-6 col-12 py-5 pl-5 m-auto">
+      <div class="col-lg-6 col-md-6 col-12 py-5 pl-lg-5  pl-md-4 m-auto">
         <h3 class="font-weight-bold text-yankees">{{.title}}</h3>
         <h6 class="font-weight-light text-dark left pb-4">{{.tagline}}</h6>
         <a href="{{.url}}" class="btn btn-lg btn-rose rounded-0 px-5">
