--- a/layouts/products-services/section.html
+++ b/layouts/products-services/section.html
@@ -7,7 +7,7 @@
   <p class="">{{.Content}}</p>
 </div>
 
-<div class="container-fluid py-5">
+<div class="container py-5">
   <div class="row">
     {{ range $.Site.Data.nav.store }}
     <div class="col-12 py-3 m-auto">
