--- a/layouts/collaborate/section.html
+++ b/layouts/collaborate/section.html
@@ -7,7 +7,7 @@
   <p class="">{{.Content}}</p>
 </div>
 
-<div class="container-fluid py-5">
+<div class="container py-5">
   <div class="row">
     {{ range $.Site.Data.nav.collaborate }}
     <div class="col-lg-6 col-md-6 col-12 py-3 m-auto">
