--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <!--  -->
+    {{partial "csscode" .}}
+    <!--  -->
     <link
       rel="shortcut icon"
       href="../../img/logo/favicon.png"
@@ -14,15 +17,6 @@
     <meta name="description" content="{{ .Description }}" />
     {{ end }}
     <title>diesmo5</title>
-
-    <link rel="stylesheet" href="../../sudocore/sudocore.css" />
-    <link rel="stylesheet" href="../../css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
-      crossorigin="anonymous"
-    />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
