--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,8 @@
     <!--  -->
     {{partial "csscode" .}}
     <!--  -->
+    <link rel="stylesheet" href="../../css/style.css" />
+
     <link
       rel="shortcut icon"
       href="../../img/logo/favicon.png"
