--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     <!--  -->
     {{partial "csscode" .}}
     <!--  -->
-    <link rel="stylesheet" href="../../css/style.css" />
+    <link rel="stylesheet" href="../../css/style.min.css" />
 
     <link
       rel="shortcut icon"
