--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,4 @@
-.text-small {
-  font-size: 11px;
-}
-.rounded-0 {
+.text-small {font-size: 11px;}.rounded-0 {
   border-radius: 0px;
 }
 .display-1 {
