--- a/layouts/media/list.html
+++ b/layouts/media/list.html
@@ -10,7 +10,7 @@
         <h1 class="font-weight-normal">
           Make the Most of What we have to Offer
         </h1>
-        <h1 class="font-weight-light pt-4">Overview Description</h1>
+        <h3 class="font-weight-light pt-4">We dedicate resources towards creating valuable content that hopefully gives our audience insight, knowledge, and a new breadth of outlook. So please... don't let it go to waste.</h3>
       </div>
     </div>
   </div>
