--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -79,7 +79,7 @@
       {{range $.Site.Data.nav.essential}}
       <a href="{{.url}}" class="text-small text-dark px-1">{{.title}}</a>
       {{end}}
-      <p href="" class="text-small text-dark px-1">&copy; diesmo5 2019</p>
+      <p href="" class="text-small text-dark px-1">&copy; DIESMO 5 2019</p>
     </div>
   </div>
 </footer>
