--- a/layouts/partials/partners.html
+++ b/layouts/partials/partners.html
@@ -4,7 +4,7 @@
     {{range $.Site.Data.collab.partners}}
     <div class="card border-0 col-lg-3 col-md-4 col-6 m-auto">
       <a href="{{.url}}" target="_blank" class="">
-        <img src="{{.img}}" alt="" class="card-img" />
+        <img src="{{.img}}" alt="" class="grayscale card-img" />
       </a>
     </div>
     {{end}}
