--- a/layouts/speaking-engagements/section.html
+++ b/layouts/speaking-engagements/section.html
@@ -42,7 +42,7 @@
         target="_blank"
         class="text-decoration-none hover-outline hover-outline-yankees col-lg-4 col-md-4 col-12"
       >
-        <div class="text-center p-5">
+        <div class="center p-5">
           <h6 class="font-weight-light">{{.tagline}}</h6>
           <h1 class="font-weight-light">{{.date}}</h1>
           <h5 class="font-weight-light">{{.name}}</h5>
