--- a/layouts/contact/section.html
+++ b/layouts/contact/section.html
@@ -38,13 +38,14 @@
         <div class="form-group">
             <select class="form-control btn-block p-2" type="text" name="subject">
               <option value="null">Subject</option>
+              <option value="General Inquiries">General Inquiries</option>
               <option value="Web Services">Web Services</option>
               <option value="Brand Design Services">Brand Design Services</option>
               <option value="Comsulting Services">Consulting Services</option>
               <option value="Organize a Hackathon">Organize a Hackathon</option>
               <option value="Organize a Workshop">Organize a Workshop</option>
               <option value="Organize a Speaking Engagement">Organize a Speaking Engagement</option>
-              <option value="General Inquiries">Organize a Speaking Engagement</option>
+              <option value="Career at Diesmo 5">Career at Diesmo 5</option>
             </select>
           </div>
       </p>
