--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Josefin+Sans|Muli&display=swap");
-body {
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,300i,400,400i,600,600i|Muli&display=swap');fbody {
   /* font-family: 'Muli', sans-serif; */
   font-family: "Josefin Sans", sans-serif;
 }
