--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -19,7 +19,23 @@
 
 <section id="content" class="pb-5">
   <div class="container">
-    <p class="font-weight-normal">{{.Content}}</p>
+    <div class="row">
+      <div class="col-lg-9 col-md-9 col-12">
+        <p class="font-weight-normal">{{.Content}}</p>
+      </div>
+      <div class="col-lg-3 col-md-3 col-12">
+        <a
+          class="twitter-timeline"
+          href="https://twitter.com/diesmo5?ref_src=twsrc%5Etfw"
+          >Tweets by diesmo5</a
+        >
+        <script
+          async
+          src="https://platform.twitter.com/widgets.js"
+          charset="utf-8"
+        ></script>
+      </div>
+    </div>
   </div>
 </section>
 
