--- a/layouts/case-studies/list.html
+++ b/layouts/case-studies/list.html
@@ -9,7 +9,7 @@
 
 <div class="container-fluid py-5">
   <div class="row">
-    {{ range .Pages.ByDate.Reverse }}
+    {{ range .Pages.ByDate }}
     <div class="col-lg-6 col-md-6 col-12 py-3 m-auto">
       <div class="content">
         <a href="{{.URL}}">
