--- a/layouts/case-studies/single.html
+++ b/layouts/case-studies/single.html
@@ -52,7 +52,50 @@
 <hr class="container" />
 
 <section class="container">
-  <p class="">{{.Content}}</p>
+  <div id="section1" class="row py-5">
+    <div class="col-lg-4 col-md-6 col-12 py-5">
+      <h2 class="font-weight-bold">{{.Params.header1}}</h2>
+    </div>
+    <div class="col-lg-8 col-md-6 col-12 py-5">
+      <h5 class="font-weight-normal">{{.Params.text1}}</h5>
+    </div>
+    <div class="col-lg-12 py-5">
+      <img src="{{.Params.img1}}" class="w-100" />
+    </div>
+  </div>
+  <div id="section2" class="row py-5">
+    <div class="col-lg-4 col-md-6 col-12 py-5">
+      <h2 class="font-weight-bold">{{.Params.header2}}</h2>
+    </div>
+    <div class="col-lg-8 col-md-6 col-12 py-5">
+      <h5 class="font-weight-normal">{{.Params.text2}}</h5>
+    </div>
+    <div class="col-lg-12 py-5">
+      <img src="{{.Params.img2}}" class="w-100" />
+    </div>
+  </div>
+  <div id="section3" class="row py-5">
+    <div class="col-lg-4 col-md-6 col-12 py-5">
+      <h2 class="font-weight-bold">{{.Params.header3}}</h2>
+    </div>
+    <div class="col-lg-8 col-md-6 col-12 py-5">
+      <h5 class="font-weight-normal">{{.Params.text3}}</h5>
+    </div>
+    <div class="col-lg-12 py-5">
+      <img src="{{.Params.img3}}" class="w-100" />
+    </div>
+  </div>
+  <div id="section4" class="row py-5">
+    <div class="col-lg-4 col-md-6 col-12 py-5">
+      <h2 class="font-weight-bold">{{.Params.header4}}</h2>
+    </div>
+    <div class="col-lg-8 col-md-6 col-12 py-5">
+      <h5 class="font-weight-normal">{{.Params.text4}}</h5>
+    </div>
+    <div class="col-lg-12 py-5">
+      <img src="{{.Params.img4}}" class="w-100" />
+    </div>
+  </div>
   <hr />
 </section>
 
