--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,7 @@
 body {
   /* font-family: 'Muli', sans-serif; */
   font-family: "Josefin Sans", sans-serif;
+  overflow-y: hidden;
 }
 .text-small {
   font-size: 11px;
@@ -407,4 +408,12 @@ a.text-yankees:hover {
 .grayscale:hover {
   filter: grayscale(0%);
   transition-duration: 0.6s;
+}
+
+.parallax{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: contain;
+  height: 100vh;
 }
