services pages rebuild

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -35,7 +35,7 @@
       gtag("config", "UA-150415761-1");
     </script>
   </head>
-  <body class="">
+  <body class="" style="overflow-x: hidden;">
     <div class="text-yankees">
       {{ block "main" . }} {{ end }}
     </div>
