--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,7 +3,7 @@
 body {
   /* font-family: 'Muli', sans-serif; */
   font-family: "Josefin Sans", sans-serif;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 .text-small {
   font-size: 11px;
