globe assets upload

--- a/layouts/services/list.html
+++ b/layouts/services/list.html
@@ -11,9 +11,9 @@
       <div class="col-lg-8 col-md-12 col-12">
         <h3 class="font-weight-light">
           We create powerful
-          <a href="/" class="text-rose"><u>strategies</u></a
-          >, unique <a href="/" class="text-rose"><u>identities</u></a
-          >, and intuitive user-centric <a href="/" class="text-rose"><u>designs</u></a
+          <a href="/services/strategy/" class="text-rose"><u>strategies</u></a
+          >, unique <a href="/services/brand-design/" class="text-rose"><u>identities</u></a
+          >, and intuitive user-centric <a href="/services/web-services/" class="text-rose"><u>designs</u></a
           > to connect people
           to brands and organizations.
         </h3>
