global connect / mailchimp

--- a/layouts/case-studies/list.html
+++ b/layouts/case-studies/list.html
@@ -16,7 +16,7 @@
           <div class="content-overlay"></div>
           <img class="content-image w-100" src="{{.Params.img}}" alt="{{.Params.alt}}" />
           <div class="content-details fadeIn-bottom">
-            <h3 class="content-title">{{.Title}} - {{.Description}}</h3>
+            <h3 class="content-title">{{.Title}}</h3>
             <!-- <p class="content-text">This is a short description</p> -->
           </div>
         </a>
