--- a/layouts/case-studies/single.html
+++ b/layouts/case-studies/single.html
@@ -35,7 +35,9 @@
     </div>
     <div class="col-lg-3 col-md-3 col-12 py-5 text-uppercase">
       <h6 class="text-dark">SCOPE OF PROJECT</h6>
-      <h6 class="font-weight-light text-secondary">{{.Params.keywords}}</h6>
+      <h6 class="font-weight-light text-secondary">
+        <a href="/tags/" class=""></a>
+        {{.Params.tags}}</h6>
       <hr class="hidden-sm-down" />
       <h6 class="text-dark pt-4">LEAD</h6>
       <h6 class="font-weight-light text-secondary">{{.Params.director}}</h6>
