--- a/layouts/press/single.html
+++ b/layouts/press/single.html
@@ -15,6 +15,7 @@
       <a
         class="twitter-timeline"
         href="https://twitter.com/diesmo5?ref_src=twsrc%5Etfw"
+        data-tweet-limit=4
         >Tweets by diesmo5</a
       >
       <script
