--- a/layouts/newsletter/section.html
+++ b/layouts/newsletter/section.html
@@ -6,29 +6,30 @@
   </h1>
 
   <section class="py-5">
-    <div class="py-5">
+    <div class="py-4">
       <h2 class="">What do we offer?</h2>
       <h4 class="font-weight-light">
-        We send newsletters with exclusive content and deals on DIESMO 5
-        products.
+        We send newsletters with exclusive content and deals on diesmo5
+        products, courses, free software & hardware giveaways, upcoming events, and job/internship opportunities.
       </h4>
     </div>
-    <div class="py-5">
+    <div class="py-4">
       <h2 class="">How often do we send?</h2>
       <h4 class="font-weight-light">
-        We send one newsletter every 2 weeks.
+        We send one newsletter every month.
       </h4>
     </div>
-    <div class="py-5">
+    <div class="py-4">
       <h2 class="">How much does it cost to join?</h2>
       <h4 class="font-weight-light">
         It's free!
       </h4>
     </div>
-    <div class="py-5">
+    <div class="py-4">
       <h2 class="">Anything else?</h2>
       <h4 class="font-weight-light">
-        Members of our newsletter get access to a live face time call once a week where we answer questions about engineering, design, or business.
+        Members of our newsletter get access to a live face time call once a
+        week where we answer questions about engineering, design, or business.
       </h4>
     </div>
   </section>
