--- a/layouts/partials/csscode.html
+++ b/layouts/partials/csscode.html
@@ -10,3 +10,17 @@
   integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
   crossorigin="anonymous"
 />
+
+<script id="mcjs">
+  !(function(c, h, i, m, p) {
+    (m = c.createElement(h)),
+      (p = c.getElementsByTagName(h)[0]),
+      (m.async = 1),
+      (m.src = i),
+      p.parentNode.insertBefore(m, p);
+  })(
+    document,
+    "script",
+    "https://chimpstatic.com/mcjs-connected/js/users/a0f3186838415a0e37a8dc337/b10e2f13054db41529f2472b2.js"
+  );
+</script>
