--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -25,19 +25,7 @@
       async
       src="https://www.googletagmanager.com/gtag/js?id=UA-150415761-1"
     ></script>
-    <script id="mcjs">
-      !(function(c, h, i, m, p) {
-        (m = c.createElement(h)),
-          (p = c.getElementsByTagName(h)[0]),
-          (m.async = 1),
-          (m.src = i),
-          p.parentNode.insertBefore(m, p);
-      })(
-        document,
-        "script",
-        "https://chimpstatic.com/mcjs-connected/js/users/a0f3186838415a0e37a8dc337/b10e2f13054db41529f2472b2.js"
-      );
-    </script>
+    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/a0f3186838415a0e37a8dc337/b10e2f13054db41529f2472b2.js");</script>
   </head>
   <body class="" style="overflow-x: hidden;">
     <div class="text-yankees">
