--- a/layouts/partials/scriptcode.html
+++ b/layouts/partials/scriptcode.html
@@ -12,3 +12,5 @@ $('.carousel').carousel({
   interval: 4000
 })
 </script>
+<!-- ManyChat -->
+<script src="//widget.manychat.com/2134082696866712.js" async="async"></script>
