web-services uploaded + announcements alert update

--- a/layouts/partials/globalnav.html
+++ b/layouts/partials/globalnav.html
@@ -31,3 +31,17 @@
     </nav>
   </section>
   
+  <section id="announcements" class="container-fluid pt-3">
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      <strong>Holy guacamole!</strong> You should text us! Text @diesmo5 to
+      81010!
+      <button
+        type="button"
+        class="close"
+        data-dismiss="alert"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+  </section>
