--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,6 +30,9 @@ body {
 .bg-rose {
   background-color: #f40c84;
 }
+.bg-graphite {
+  background-color: #0b0b0b;
+}
 
 .btn-yankees {
   background-color: #1a1c3a;
