--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -79,7 +79,9 @@
       {{range $.Site.Data.nav.essential}}
       <a href="{{.url}}" class="text-small text-dark px-1">{{.title}}</a>
       {{end}}
-      <p href="" class="text-small text-dark px-1">&copy; DIESMO 5 2019</p>
+    </div>
+    <div class="row justify-content-end pr-2 py-1">
+      <p href="" class="text-small text-dark px-1">Copyright &copy; 2016 -  <script type="text/javascript">document.write(new Date().getFullYear());</script>, diesmo5, Inc. - All Rights Reserved</p>
     </div>
   </div>
 </footer>
