--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -75,12 +75,12 @@
         </div>
       </div>
     </div>
-    <div class="row justify-content-end pr-2">
+    <div class="row justify-content-end">
       {{range $.Site.Data.nav.essential}}
       <a href="{{.url}}" class="text-small text-dark px-1">{{.title}}</a>
       {{end}}
     </div>
-    <div class="row justify-content-end pr-2 py-1">
+    <div class="row justify-content-end py-1">
       <p href="" class="text-small text-dark px-1">Copyright &copy; 2016 -  <script type="text/javascript">document.write(new Date().getFullYear());</script>, diesmo5, Inc. - All Rights Reserved</p>
     </div>
   </div>
