alerts in containers

--- a/layouts/partials/webservicesnav.html
+++ b/layouts/partials/webservicesnav.html
@@ -43,7 +43,7 @@
   </nav>
 </section>
 
-<section id="announcements" class="container-fluid py-2">
+<section id="announcements" class="container py-2">
   <div class="alert alert-warning alert-dismissible fade show" role="alert">
     <strong>Keep in mind!</strong> Our D5WS is still in progress. (Previously
     known as SudoCore)
