--- a/layouts/partials/globalnav.html
+++ b/layouts/partials/globalnav.html
@@ -31,7 +31,7 @@
     </nav>
   </section>
   
-  <section id="announcements" class="container-fluid pt-3">
+  <section id="announcements" class="container pt-3">
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
       <strong>Holy guacamole!</strong> You should text us! Text @diesmo5 to
       81010!
